[gd_scene load_steps=8 format=3 uid="uid://djmnmcdi7q0qx"]

[ext_resource type="Script" path="res://Scripts/start_menu.gd" id="1_adic7"]
[ext_resource type="PackedScene" uid="uid://bh4nypdpojopx" path="res://Scenes/map.tscn" id="2_1klnt"]
[ext_resource type="FontFile" uid="uid://klgu5lm1jtxw" path="res://easter-egg/EasterEgg.ttf" id="3_gkegr"]
[ext_resource type="Texture2D" uid="uid://bq8ntpbt7cpim" path="res://Assets/Menu/Headless.png" id="4_480ar"]
[ext_resource type="Script" path="res://Scripts/VolumeSlider.gd" id="4_i402n"]

[sub_resource type="Theme" id="Theme_ij2i5"]

[sub_resource type="FontVariation" id="FontVariation_sd11k"]

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource("1_adic7")

[node name="Background" type="Node3D" parent="."]

[node name="World" parent="Background" instance=ExtResource("2_1klnt")]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="Background/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Background/SubViewportContainer/SubViewport"]
transform = Transform3D(-0.999743, 0.00327505, 0.0224497, 0.00216739, 0.998787, -0.0491879, -0.0225835, -0.0491266, -0.998537, -50.42, 8.19775, 11.4313)
fov = 90.0

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.998823, 1)

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = SubResource("Theme_ij2i5")
theme_override_fonts/font = ExtResource("3_gkegr")
theme_override_font_sizes/font_size = 64
text = "DoomEggs"

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="StartButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Start Game"
alignment = 0

[node name="SettingsButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Settings"
alignment = 0

[node name="HowToPlay" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "How To Play"
alignment = 0

[node name="MarginContainerSettings" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainerSettings"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainerSettings/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 75

[node name="SettingsLabel" type="Label" parent="Menu/MarginContainerSettings/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_gkegr")
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Menu/MarginContainerSettings/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 150

[node name="TextureRect" type="TextureRect" parent="Menu/MarginContainerSettings/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_480ar")

[node name="SensitivityLabel" type="Label" parent="Menu/MarginContainerSettings/VBoxContainer/TextureRect"]
z_index = 1
layout_mode = 2
offset_left = 14.4124
offset_top = 184.0
offset_right = 622.412
offset_bottom = 207.0
text = "Mouse sensitivity:"

[node name="SensitivityHSlider" type="HSlider" parent="Menu/MarginContainerSettings/VBoxContainer/TextureRect"]
z_index = 1
layout_mode = 2
offset_left = 16.0
offset_top = 225.0
offset_right = 583.0
offset_bottom = 241.0
min_value = 0.1
max_value = 1.0
step = 0.01
value = 0.2

[node name="VolumeEffectHSlider" type="HSlider" parent="Menu/MarginContainerSettings/VBoxContainer/TextureRect"]
z_index = 1
layout_mode = 2
offset_left = 16.4148
offset_top = 149.0
offset_right = 583.415
offset_bottom = 165.0
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("4_i402n")
busName = "Sfx"

[node name="VolumeEffectLabel" type="Label" parent="Menu/MarginContainerSettings/VBoxContainer/TextureRect"]
z_index = 1
layout_mode = 2
offset_left = 16.4148
offset_top = 110.0
offset_right = 624.415
offset_bottom = 133.0
text = "Volume effect: "

[node name="VolumeMusicHSlider" type="HSlider" parent="Menu/MarginContainerSettings/VBoxContainer/TextureRect"]
z_index = 1
layout_mode = 2
offset_left = 19.4183
offset_top = 76.0
offset_right = 584.418
offset_bottom = 92.0
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("4_i402n")

[node name="VolumeMusicLabel2" type="Label" parent="Menu/MarginContainerSettings/VBoxContainer/TextureRect"]
z_index = 1
layout_mode = 2
offset_left = 14.4124
offset_top = 43.0
offset_right = 622.412
offset_bottom = 66.0
text = "Volume music: "

[node name="MarginContainer3" type="MarginContainer" parent="Menu/MarginContainerSettings/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 150

[node name="MarginContainerHow" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainerHow"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainerHow/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 75

[node name="HowToPlayLabel" type="Label" parent="Menu/MarginContainerHow/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_gkegr")
theme_override_font_sizes/font_size = 32
text = "How to Play"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Menu/MarginContainerHow/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 150

[node name="TextureRect" type="TextureRect" parent="Menu/MarginContainerHow/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_480ar")

[node name="Explenation" type="RichTextLabel" parent="Menu/MarginContainerHow/VBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 44.2168
offset_top = -109.5
offset_right = -117.783
offset_bottom = 97.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = SubResource("FontVariation_sd11k")
text = "It's Easter egg hunt time! Get as many as you can before time runs out! But watch out for bunnies and bells! To catch an egg more easily, use the 'E' key to immobilize the egg for a short time.

Keys:

WASD: Movement
E: Throw a ring to immobilize an egg
LShift: Dash
Space: Jump / Double Jump"
fit_content = true

[node name="MarginContainer3" type="MarginContainer" parent="Menu/MarginContainerHow/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 150

[node name="MarginContainerBack" type="MarginContainer" parent="Menu"]
layout_mode = 2
offset_right = 243.0
offset_bottom = 50.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainerBack"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="BackButton" type="Button" parent="Menu/MarginContainerBack/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Back"

[connection signal="button_up" from="Menu/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_button_up"]
[connection signal="button_up" from="Menu/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_button_up"]
[connection signal="button_up" from="Menu/MarginContainer/VBoxContainer/HowToPlay" to="." method="_on_how_to_play_button_up"]
[connection signal="value_changed" from="Menu/MarginContainerSettings/VBoxContainer/TextureRect/SensitivityHSlider" to="." method="_on_sensitivity_h_slider_value_changed"]
[connection signal="button_up" from="Menu/MarginContainerBack/VBoxContainer/BackButton" to="." method="_on_back_button_button_up"]
